--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,2 +1,9 @@
 transmission_server:
   url: http://mytransmissionserver.local:80/transmission/
+  
+# Trackers for torrents that you want to keep seeding
+private_trackers:
+  - server: https://tracker.torrentleech.org
+    sitename: torrentleech
+    origin_folder: /data/completed/TV
+    dest_folder: /data/completed/TV/Seed
